// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product renders correctly 1`] = `
.c11 {
  margin-bottom: 8px !important;
  color: #3f51b5 !important;
}

.c12 {
  background-color: #4caf50 !important;
  color: #fff !important;
  width: 100% !important;
  box-shadow: none !important;
}

.c12:hover {
  color: #fff !important;
}

.c8 {
  border-radius: 1rem;
  padding: 0.2rem 0.75rem;
  background-color: #546e7a;
  margin-right: 0.25rem;
  color: #eceff1;
}

.c8:last-child {
  margin-right: 0;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
}

.c5 {
  margin-left: 0.25rem;
  color: #ffb74d;
}

.c2 {
  background-color: white;
  margin-right: 16px;
}

.c3 {
  max-width: 100%;
  max-height: 125px;
}

.c4 {
  color: inherit;
}

.c6 {
  margin-top: 0.5rem;
}

.c10 {
  min-height: 1px;
  -webkit-flex: 0 0 100%;
  -ms-flex: 0 0 100%;
  flex: 0 0 100%;
  max-width: 100%;
  border-top: 2px solid #eceff1;
  padding: 16px 8px;
  text-align: center;
}

.c10:first-child {
  border-top: 0;
  border-left: 0;
}

.c14 {
  background-color: #eceff1;
  border-top: 2px solid #eceff1;
  padding: 8px 16px;
}

.c15 {
  color: #f06292;
  font-size: 1.25rem;
  line-height: 0;
}

.c16 {
  margin-left: 4px;
}

.c0 {
  margin-bottom: 56px;
}

.c9 {
  border: 2px solid #eceff1;
  background-color: #fff;
}

.c13 {
  border-top: 2px solid #eceff1;
  padding: 24px 16px;
  width: 100%;
}

@media (min-width:62em) {
  .c2 {
    border: 2px solid #eceff1;
    margin-bottom: -32px;
    padding: 12px 8px;
    text-align: center;
  }
}

@media (min-width:62em) {
  .c3 {
    max-height: 75px;
  }
}

@media (min-width:62em) {
  .c6 {
    float: right;
    max-height: 75px;
  }
}

@media (min-width:36em) {
  .c10 {
    -webkit-flex: 0 0 20%;
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
  }
}

@media (min-width:36em) {
  .c10 {
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 8px;
    border-top: 0;
    border-left: 2px solid #eceff1;
  }
}

<div
  class="c0"
>
  <div
    class="MuiGrid-root c1 MuiGrid-container"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-2"
    >
      <div
        class="c2"
      >
        <img
          alt="Landbay"
          class="c3"
          src="https://b2bfinance.com/images/partners/Landbay.png"
        />
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-7"
    >
      <div
        class="MuiGrid-root MuiTypography-root MuiTypography-body1 MuiTypography-colorTextPrimary MuiGrid-container"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <p
                class="MuiTypography-root c4 MuiTypography-h5"
              >
                Landbay
              </p>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root c5"
                focusable="false"
                role="presentation"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13.5.67s.74 2.65.74 4.8c0 2.06-1.35 3.73-3.41 3.73-2.07 0-3.63-1.67-3.63-3.73l.03-.36C5.21 7.51 4 10.62 4 14c0 4.42 3.58 8 8 8s8-3.58 8-8C20 8.61 17.41 3.8 13.5.67zM11.71 19c-1.78 0-3.22-1.4-3.22-3.14 0-1.62 1.05-2.76 2.81-3.12 1.77-.36 3.6-1.21 4.62-2.58.39 1.29.59 2.65.59 4.04 0 2.65-2.15 4.8-4.8 4.8z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <p
            class="MuiTypography-root c4 MuiTypography-body1"
          >
            Landbay - Buy To Let Wizards
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3"
    >
      <div
        class="MuiGrid-root c6"
      >
        <div
          class="c7"
        >
          <div
            class="c8"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
            >
              broker only
            </span>
          </div>
          <div
            class="c8"
          >
            <span
              class="MuiTypography-root MuiTypography-caption MuiTypography-colorInherit"
            >
              consumer favourite
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root c9 MuiGrid-container"
  >
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Max LTV
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextSecondary"
      >
        85%
      </h5>
    </div>
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Initial Rate
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextSecondary"
      >
        1.49%
      </h5>
    </div>
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Subsequent Rate
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextSecondary"
      >
        2.75%
      </h5>
    </div>
    <div
      class="c10"
    >
      <h6
        class="MuiTypography-root MuiTypography-subtitle2"
      >
        Fees
      </h6>
      <h5
        class="MuiTypography-root MuiTypography-h5 MuiTypography-colorTextSecondary"
      >
        £1,495
      </h5>
    </div>
    <div
      class="c10"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-align-content-xs-center"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <button
            class="MuiTypography-root MuiLink-root MuiLink-underlineHover c11 MuiLink-button MuiTypography-colorPrimary"
          >
            more details
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
        >
          <a
            aria-disabled="false"
            class="MuiButtonBase-root MuiFab-root c12 MuiFab-extended MuiFab-primary MuiFab-sizeMedium"
            href="https://b2bfinance.com/enquire/buy-to-let"
            rel="noopener"
            role="button"
            tabindex="0"
            target="_blank"
          >
            <span
              class="MuiFab-label"
            >
              Get Deal
            </span>
          </a>
        </div>
      </div>
    </div>
    <p
      class="MuiTypography-root c13 MuiTypography-body2"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean bibendum facilisis condimentum. Donec laoreet porttitor condimentum. Nulla luctus efficitur magna, eget rhoncus metus placerat sed.
    </p>
    <div
      class="MuiGrid-root c14 MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <span
          class="c15"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M12 7.13l.97 2.29.47 1.11 1.2.1 2.47.21-1.88 1.63-.91.79.27 1.18.56 2.41-2.12-1.28-1.03-.64-1.03.62-2.12 1.28.56-2.41.27-1.18-.91-.79-1.88-1.63 2.47-.21 1.2-.1.47-1.11.97-2.27M12 2L9.19 8.63 2 9.24l5.46 4.73L5.82 21 12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2z"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <h6
          class="MuiTypography-root MuiTypography-subtitle1"
        >
          <span
            class="c16"
          >
            Awarded best broker 2019
          </span>
        </h6>
      </div>
    </div>
  </div>
</div>
`;

exports[`Wrapper render correctly without fade 1`] = `
.c0 {
  margin-bottom: 56px;
}

<div
  class="c0"
/>
`;

exports[`Wrapper renders correctly with fade 1`] = `
.c0 {
  margin-bottom: 56px;
  opacity: 0.6;
}

<div
  class="c0"
/>
`;
